// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Column correctly 1`] = `
@media (min-width:768px) and (max-width:831px) {
  .emotion-0 {
    grid-column: span 3;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-0 {
    grid-column: span 3;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-0 {
    grid-column: span 3;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-0 {
    grid-column: span 3;
  }
}

@media (min-width:1456px) {
  .emotion-0 {
    grid-column: span 3;
  }
}

<div>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`renders Column multi-sizes correctly 1`] = `
@media (min-width:768px) and (max-width:831px) {
  .emotion-0 {
    grid-column: span 2;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-0 {
    grid-column: span 2;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-0 {
    grid-column: span 2;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-0 {
    grid-column: span 4;
  }
}

@media (min-width:1456px) {
  .emotion-0 {
    grid-column: span 5;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-2 {
    grid-column: span 2;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-2 {
    grid-column: span 2;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-2 {
    grid-column: span 2;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-2 {
    grid-column: span 4;
  }
}

@media (min-width:1456px) {
  .emotion-2 {
    grid-column: span 4;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-3 {
    grid-column: span 1;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-3 {
    grid-column: span 2;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-3 {
    grid-column: span 2;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-3 {
    grid-column: span 4;
  }
}

@media (min-width:1456px) {
  .emotion-3 {
    grid-column: span 5;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-4 {
    grid-column: span 2;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-4 {
    grid-column: span 2;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-4 {
    grid-column: span 2;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-4 {
    grid-column: span 2;
  }
}

@media (min-width:1456px) {
  .emotion-4 {
    grid-column: span 5;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-5 {
    grid-column: span 6;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-5 {
    grid-column: span 2;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-5 {
    grid-column: span 2;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-5 {
    grid-column: span 2;
  }
}

@media (min-width:1456px) {
  .emotion-5 {
    grid-column: span 1;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-6 {
    grid-column: span 1;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-6 {
    grid-column: span 6;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-6 {
    grid-column: span 6;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-6 {
    grid-column: span 6;
  }
}

@media (min-width:1456px) {
  .emotion-6 {
    grid-column: span 3;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-7 {
    grid-column: span 6;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-7 {
    grid-column: span 4;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-7 {
    grid-column: span 4;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-7 {
    grid-column: span 4;
  }
}

@media (min-width:1456px) {
  .emotion-7 {
    grid-column: span 12;
  }
}

<div>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-0"
  />
  <div
    className="emotion-2"
  />
  <div
    className="emotion-3"
  />
  <div
    className="emotion-4"
  />
  <div
    className="emotion-5"
  />
  <div
    className="emotion-6"
  />
  <div
    className="emotion-7"
  />
</div>
`;

exports[`renders Column sizes correctly 1`] = `
@media (min-width:768px) and (max-width:831px) {
  .emotion-2 {
    grid-column: span 3;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-2 {
    grid-column: span 3;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-2 {
    grid-column: span 3;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-2 {
    grid-column: span 3;
  }
}

@media (min-width:1456px) {
  .emotion-2 {
    grid-column: span 3;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-0 {
    grid-column: span 1;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-0 {
    grid-column: span 1;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-0 {
    grid-column: span 1;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-0 {
    grid-column: span 1;
  }
}

@media (min-width:1456px) {
  .emotion-0 {
    grid-column: span 1;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-1 {
    grid-column: span 2;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-1 {
    grid-column: span 2;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-1 {
    grid-column: span 2;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-1 {
    grid-column: span 2;
  }
}

@media (min-width:1456px) {
  .emotion-1 {
    grid-column: span 2;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-3 {
    grid-column: span 4;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-3 {
    grid-column: span 4;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-3 {
    grid-column: span 4;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-3 {
    grid-column: span 4;
  }
}

@media (min-width:1456px) {
  .emotion-3 {
    grid-column: span 4;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-4 {
    grid-column: span 5;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-4 {
    grid-column: span 5;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-4 {
    grid-column: span 5;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-4 {
    grid-column: span 5;
  }
}

@media (min-width:1456px) {
  .emotion-4 {
    grid-column: span 5;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-5 {
    grid-column: span 6;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-5 {
    grid-column: span 6;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-5 {
    grid-column: span 6;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-5 {
    grid-column: span 6;
  }
}

@media (min-width:1456px) {
  .emotion-5 {
    grid-column: span 6;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-6 {
    grid-column: span 7;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-6 {
    grid-column: span 7;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-6 {
    grid-column: span 7;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-6 {
    grid-column: span 7;
  }
}

@media (min-width:1456px) {
  .emotion-6 {
    grid-column: span 7;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-7 {
    grid-column: span 8;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-7 {
    grid-column: span 8;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-7 {
    grid-column: span 8;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-7 {
    grid-column: span 8;
  }
}

@media (min-width:1456px) {
  .emotion-7 {
    grid-column: span 8;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-8 {
    grid-column: span 9;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-8 {
    grid-column: span 9;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-8 {
    grid-column: span 9;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-8 {
    grid-column: span 9;
  }
}

@media (min-width:1456px) {
  .emotion-8 {
    grid-column: span 9;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-9 {
    grid-column: span 10;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-9 {
    grid-column: span 10;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-9 {
    grid-column: span 10;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-9 {
    grid-column: span 10;
  }
}

@media (min-width:1456px) {
  .emotion-9 {
    grid-column: span 10;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-10 {
    grid-column: span 11;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-10 {
    grid-column: span 11;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-10 {
    grid-column: span 11;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-10 {
    grid-column: span 11;
  }
}

@media (min-width:1456px) {
  .emotion-10 {
    grid-column: span 11;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-11 {
    grid-column: span 12;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-11 {
    grid-column: span 12;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-11 {
    grid-column: span 12;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-11 {
    grid-column: span 12;
  }
}

@media (min-width:1456px) {
  .emotion-11 {
    grid-column: span 12;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-12 {
    grid-column: span 13;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-12 {
    grid-column: span 13;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-12 {
    grid-column: span 13;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-12 {
    grid-column: span 13;
  }
}

@media (min-width:1456px) {
  .emotion-12 {
    grid-column: span 13;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-13 {
    grid-column: span 14;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-13 {
    grid-column: span 14;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-13 {
    grid-column: span 14;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-13 {
    grid-column: span 14;
  }
}

@media (min-width:1456px) {
  .emotion-13 {
    grid-column: span 14;
  }
}

<div>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-2"
  />
  <div
    className="emotion-3"
  />
  <div
    className="emotion-4"
  />
  <div
    className="emotion-5"
  />
  <div
    className="emotion-6"
  />
  <div
    className="emotion-7"
  />
  <div
    className="emotion-8"
  />
  <div
    className="emotion-9"
  />
  <div
    className="emotion-10"
  />
  <div
    className="emotion-11"
  />
  <div
    className="emotion-12"
  />
  <div
    className="emotion-13"
  />
</div>
`;

exports[`renders Column with passed styles correctly 1`] = `
.emotion-0 {
  display: block;
  color: #ccc;
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-0 {
    grid-column: span 3;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-0 {
    grid-column: span 3;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-0 {
    grid-column: span 3;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-0 {
    grid-column: span 3;
  }
}

@media (min-width:1456px) {
  .emotion-0 {
    grid-column: span 3;
  }
}

<div>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`renders Column without passed size correctly 1`] = `
@media (min-width:768px) and (max-width:831px) {
  .emotion-0 {
    grid-column: span 1;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-0 {
    grid-column: span 1;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-0 {
    grid-column: span 1;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-0 {
    grid-column: span 1;
  }
}

@media (min-width:1456px) {
  .emotion-0 {
    grid-column: span 1;
  }
}

<div>
  <div
    className="emotion-0"
  />
</div>
`;
